# certificateservice

./: Makefile  README.md  download_certificate.sh  pyproject.toml  upload_certificate.sh
.github/: dependabot.yml
.github/workflows/: test.yml
certificateservice/: app.py  certificate.py  cli.py
certificateservice/templates/: index.html
tests/: conftest.py  test_config.py  test_ctadata.py  test_updown.py
