[tool.poetry]
name = "certificateservice"
version = "0.4.0"
description = ""
authors = ["Bastien Wermeille <bastien.wermeille@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = {extras = ["flask"], version = "^2.0.1"}
importlib-metadata = "^7.1.0"
pyopenssl = "^24.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.jupyterhub.dependencies]
jupyterhub = "^4.1.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
ctadata = { git = "https://github.com/cta-epfl/ctadata.git", tag = "v0.5.1" }
pytest = "^8.1.1"
psutil = "^5.9.5"
pytest-flask = "^1.2.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78
skip-string-normalization = true

[tool.poetry.scripts]
certificateservice = { callable = "certificateservice.cli:main" }
